[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wagwan_cli"
dynamic = ["dependencies"]
version = "0.0.1"
authors = [
  { name="David Okpare", email="okparedave@gmail.com" },
]
description = "A CLI tool that explains code snippets, converts them to other languages, and fixes bugs, built in Python using OpenAI's Codex."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/DaveOkpare/wagwan-cli"
"Bug Tracker" = "https://github.com/DaveOkpare/wagwan-cli/issues"