[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagwan"
authors = [{name = "David Okpare", email = "okparedave@gmail.com"}]
version = "0.0.2"
description = "A CLI tool that explains code snippets, converts them to other languages, and fixes bugs, built in Python using OpenAI's Codex."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    # Pick your license as you wish
    "License :: OSI Approved :: MIT License",
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate you support Python 3. These classifiers are *not*
    # checked by "pip install". See instead "python_requires" below.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "openai",
    "python-dotenv",
    "typer"
]

[project.urls]
Home = "https://github.com/DaveOkpare/wagwan-cli"

[project.scripts]  # Optional
wagwan = "wagwan:app"
