[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagwan"
authors = [{name = "David Okpare", email = "okparedave@gmail.com"}]
version = "0.0.2"
description = "A CLI tool that explains code snippets, converts them to other languages, and fixes bugs, built in Python using OpenAI's Codex."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "openai",
    "configparser",
    "typer"
]

[project.urls]
Home = "https://github.com/DaveOkpare/wagwan-cli"

[project.scripts]  # Optional
wagwan = "wagwan:app"
